# FastApiTutorial

./: README.md  pyproject.toml
src/: app.py
