[tool.poetry]
name = "fastapitutorial"
version = "0.1.0"
description = "fast api tutorial"
authors = ["Muhammad Wafa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = "^0.30.1"
pymongo = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
